force-app/main/default/objects/Jira_Integration_Setting__mdt/Jira_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Jira Integration Setting</label>
    <pluralLabel>Jira Integration Settings</pluralLabel>
</CustomObject>