force-app/main/default/objects/Jira_Integration_Setting__mdt/fields/Assignee_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Account_Id__c</fullName>
    <label>Assignee Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>