force-app/main/default/objects/Jira_Integration_Setting__mdt/fields/Issue_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type_Id__c</fullName>
    <label>Issue Type Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>