force-app/main/default/objects/Jira_Integration_Setting__mdt/fields/Parent_Key__c.field-meta.xml
<CustomField>
    <fullName>Parent_Key__c</fullName>
    <label>Parent Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>