force-app/main/default/objects/Jira_Integration_Setting__mdt/fields/Reporter_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Account_Id__c</fullName>
    <label>Reporter Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>